--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
+    "@types/screeps": "^3.3.8",
     "rollup": "^4.16.4",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-screeps": "^1.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
